--- a/open62541pp_ros2/package.xml
+++ b/open62541pp_ros2/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>open62541pp_core_libraries</name>
+  <name>open62541pp_ros2</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="vishnu.pbhat93@gmail.com">vishnu</maintainer>
