--- a/opcua_client_core/package.xml
+++ b/opcua_client_core/package.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>open62541pp_ros2</name>
+  <name>opcua_client_core</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="vishnu.pbhat93@gmail.com">vishnu</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <build_depend>rclcpp</build_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
