--- a/opcua_tests/package.xml
+++ b/opcua_tests/package.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>opcua_client_core</name>
+  <name>opcua_tests</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="vishnu.pbhat93@gmail.com">vishnu</maintainer>
-  <license>TODO: License declaration</license>
+  <maintainer email="vishnuprasad.prachandabhanu@ipa.fraunhofer.de">Vishnuprasad Prachandabhanu</maintainer>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>rclcpp</build_depend>
-  <build_depend>git</build_depend>
+  <depend>rclcpp</depend>
+  <depend>open62541pp</depend>
+  <depend>open62541pp_vendor</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
