--- a/opcua_tests/package.xml
+++ b/opcua_tests/package.xml
@@ -10,7 +10,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
-  <depend>open62541pp</depend>
+  <!-- depend>open62541pp</depend -->
   <depend>open62541pp_vendor</depend>
 
   <test_depend>ament_lint_auto</test_depend>
