update build testing

--- a/open62541pp_vendor/CMakeLists.txt
+++ b/open62541pp_vendor/CMakeLists.txt
@@ -69,8 +69,9 @@ ament_export_targets(
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  set(ament_cmake_copyright_FOUND TRUE)
-  set(ament_cmake_cpplint_FOUND TRUE)
+  list(APPEND AMENT_LINT_AUTO_EXCLUDE
+    ament_cmake_cppcheck
+  )
   ament_lint_auto_find_test_dependencies()
 endif()
 
