--- a/.github/workflows/rolling-test.yaml
+++ b/.github/workflows/rolling-test.yaml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         ROS_DISTRO: [rolling]
-        ROS_REPO: [main]
+        ROS_REPO: [testing]
     env:
       CCACHE_DIR: "${{ github.workspace }}/.ccache"
     steps:
