--- a/open62541pp_vendor/package.xml
+++ b/open62541pp_vendor/package.xml
@@ -9,7 +9,10 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <build_depend>ament_cmake_vendor_package</build_depend>
+  <build_depend>ament_cmake_python</build_depend>
   <build_depend>git</build_depend>
+  <depend>python3-empy</depend>
+  <depend>python3-jinja2</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
