--- a/opcua_tests/CMakeLists.txt
+++ b/opcua_tests/CMakeLists.txt
@@ -33,9 +33,7 @@ ament_target_dependencies(example_client_node ${THIS_PACKAGE_INCLUDE_DEPENDS})
 install(TARGETS example_server_node example_client_node
         DESTINATION lib/${PROJECT_NAME})
 
-install(DIRECTORY include/
-  DESTINATION include/
-)
+install(DIRECTORY include/ DESTINATION include/)
 
 # if(BUILD_TESTING) find_package(ament_lint_auto REQUIRED) # the following line
 # skips the linter which checks for copyrights set(ament_cmake_copyright_FOUND
