--- a/open62541pp_vendor/package.xml
+++ b/open62541pp_vendor/package.xml
@@ -10,6 +10,8 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <build_depend>ament_cmake_vendor_package</build_depend>
   <build_depend>git</build_depend>
+  <build_depend>python3-empy</build_depend>
+  <build_depend>python3-jinja2</build_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
