--- a/opcua_client_core/package.xml
+++ b/opcua_client_core/package.xml
@@ -13,6 +13,7 @@
   <depend>rclcpp_lifecycle</depend>
   <depend>lifecycle_msgs</depend>
   <depend>rclcpp_components</depend>
+  <depend>open62541pp_vendor</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
