--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,28 +15,43 @@
 repos:
   # Standard hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v4.6.0
     hooks:
       - id: check-added-large-files
+      - id: check-ast
       - id: check-case-conflict
-      - id: check-json
+      - id: check-docstring-first
       - id: check-merge-conflict
       - id: check-symlinks
-      - id: check-toml
-      - id: check-yaml
+      - id: check-xml
+      # - id: check-yaml
       - id: debug-statements
-      - id: destroyed-symlinks
-      - id: detect-private-key
       - id: end-of-file-fixer
       - id: mixed-line-ending
-      - id: pretty-format-json
       - id: trailing-whitespace
+      - id: fix-byte-order-marker
 
-  - repo: https://github.com/psf/black
-    rev: 23.10.0
+  # Python hooks
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.16.0
     hooks:
-      - id: black
+    -   id: pyupgrade
+        args: [--py36-plus]
 
+  # PEP 257
+  # - repo: https://github.com/FalconSocial/pre-commit-mirrors-pep257
+  #   rev: v0.3.3
+  #   hooks:
+  #   - id: pep257
+  #     args: ["--ignore=D100,D101,D102,D103,D104,D105,D106,D107,D203,D212,D404"]
+
+  # - repo: https://github.com/pycqa/flake8
+  #   rev: 7.1.0
+  #   hooks:
+  #   - id: flake8
+  #     args: ["--extend-ignore=E501"]
+
+  # CPP hooks
   - repo: local
     hooks:
       - id: clang-format
@@ -46,18 +61,71 @@ repos:
         language: system
         files: \.(c|cc|cxx|cpp|frag|glsl|h|hpp|hxx|ih|ispc|ipp|java|js|m|proto|vert)$
         args: ['-fallback-style=none', '-i']
-  - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.6
-    hooks:
-      - id: codespell
-        args: ['--write-changes', '--ignore-words=.codespell_words', '--skip="*.eps"']
-        exclude: CHANGELOG.rst
 
-  - repo: https://github.com/cheshirekow/cmake-format-precommit
-    rev: v0.6.10
+  # - repo: local
+  #   hooks:
+  #     - id: ament_cppcheck
+  #       name: ament_cppcheck
+  #       description: Static code analysis of C/C++ files.
+  #       stages: [commit]
+  #       entry: ament_cppcheck
+  #       language: system
+  #       files: \.(h\+\+|h|hh|hxx|hpp|cuh|c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
+
+  # Maybe use https://github.com/cpplint/cpplint instead
+  # - repo: local
+  #   hooks:
+  #     - id: ament_cpplint
+  #       name: ament_cpplint
+  #       description: Static code analysis of C/C++ files.
+  #       stages: [commit]
+  #       entry: ament_cpplint
+  #       language: system
+  #       files: \.(h\+\+|h|hh|hxx|hpp|cuh|c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
+  #       args: ["--linelength=100", "--filter=-whitespace/newline"]
+
+  # Cmake hooks
+  # - repo: local
+  #   hooks:
+  #     - id: ament_lint_cmake
+  #       name: ament_lint_cmake
+  #       description: Check format of CMakeLists.txt files.
+  #       stages: [commit]
+  #       entry: ament_lint_cmake
+  #       language: system
+  #       files: CMakeLists\.txt$
+
+  # Copyright
+  # - repo: local
+  #   hooks:
+  #     - id: ament_copyright
+  #       name: ament_copyright
+  #       description: Check if copyright notice is available in all files.
+  #       stages: [commit]
+  #       entry: ament_copyright
+  #       language: system
+
+  # Docs - RestructuredText hooks
+  - repo: https://github.com/PyCQA/doc8
+    rev: v1.1.1
     hooks:
-      - id: cmake-format
-      # - id: cmake-lint
-        # args:
-        #   - "--disabled-codes=C0301" # Disable Line too long lint
-        #   - "--suppress-decorations"
+      - id: doc8
+        args: ['--max-line-length=100', '--ignore=D001']
+        exclude: CHANGELOG\.rst$
+
+  - repo: https://github.com/pre-commit/pygrep-hooks
+    rev: v1.10.0
+    hooks:
+      - id: rst-backticks
+        exclude: CHANGELOG\.rst$
+      - id: rst-directive-colons
+      - id: rst-inline-touching-normal
+
+  # Spellcheck in comments and docs
+  # skipping of *.svg files is not working...
+  # - repo: https://github.com/codespell-project/codespell
+  #   rev: v2.3.0
+  #   hooks:
+  #     - id: codespell
+  #       args: ['--write-changes']
+  #       exclude: CHANGELOG\.rst|\.(svg|pyc)$
